tests-system/rbt-division-by-zero/output
b % a == 0, "b must be a multiple of a"
  ^ rbt-division-by-zero/foo.rsl:18: issue: divisor could be 0 [vcg-div-by-zero]
  | example record_type triggering error:
  |   C bad_potato {
  |     a = 0
  |     b = 0
  |   }
a / b > 0, "a / b must be greater than 0"
  ^ rbt-division-by-zero/foo.rsl:14: issue: divisor could be 0 [vcg-div-by-zero]
  | example record_type triggering error:
  |   T bad_potato {
  |     a = 0
  |     b = 0
  |   }
b = 0
    ^ rbt-division-by-zero/foo.trlc:5: error: division by zero in a / b (foo.rsl:14)
a = 0
    ^ rbt-division-by-zero/foo.trlc:9: error: division by zero in b % a (foo.rsl:18)
Processed 1 model and 1 requirement file and found 2 warnings and 2 errors
